log
Thu Mar 19 07:12:54 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c:1:3: error: stray ‘#’ in program
    1 | te#include <stdio.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘te’
    1 | te#include <stdio.h>
      | ^~
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | te#include <stdio.h>
      |            ^
f74ba34
Thu Mar 19 07:13:13 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
exercises.c:1:3: error: stray ‘#’ in program
    1 | te#include <stdio.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘te’
    1 | te#include <stdio.h>
      | ^~
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | te#include <stdio.h>
      |            ^
2e104ff
Thu Mar 19 07:13:31 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4a04127
Thu Mar 19 07:29:11 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:19: error: invalid use of incomplete typedef ‘List’
   56 |    size_t talla = *L;
      |                   ^
0017be2
Thu Mar 19 07:29:35 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:19: error: initialization of ‘size_t’ {aka ‘long unsigned int’} from ‘List *’ makes integer from pointer without a cast [-Wint-conversion]
   56 |    size_t talla = L;
      |                   ^
01457c2
Thu Mar 19 07:36:45 PM UTC 2026: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:21: error: comparison between pointer and integer [-Werror]
   57 |    for(int i = 0; i < dato; i++){
      |                     ^
exercises.c:58:7: error: ‘suma’ undeclared (first use in this function)
   58 |       suma += dato;
      |       ^~~~
exercises.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
c4642f0
Thu Mar 19 07:37:10 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:21: error: comparison between pointer and integer [-Werror]
   58 |    for(int i = 0; i < dato; i++){
      |                     ^
exercises.c:59:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       suma += dato;
      |            ^~
cc1: all warnings being treated as errors
7efab71
Thu Mar 19 07:41:39 PM UTC 2026: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       suma += dato;
      |            ^~
b50defe
Thu Mar 19 07:44:31 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:15: error: ‘numero’ undeclared (first use in this function)
   58 |       suma += numero;
      |               ^~~~~~
exercises.c:58:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:55:8: error: variable ‘suma’ set but not used [-Werror=unused-but-set-variable]
   55 |    int suma = 0;
      |        ^~~~
cc1: all warnings being treated as errors
d079b34
Thu Mar 19 07:45:14 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       suma += dato;
      |            ^~
99642ab
Thu Mar 19 07:45:31 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c8b069c
